# Deepwalk-Clone

./: .gitignore  LICENSE  README.md  asset-manifest.json  index.html  package.json  requirements.txt  requirments  setup.cfg
.github/workflows/: release-drafter.yml  unittest.yaml
data/karate/: edgelist
deepwalk/: __init__.py  __main__.py  binary_tree.py  graph.py  random_walker.py  skipgram.py  types.py
public/: index.html
src/: theme.js
src/components/: index.js
static/js/: 2.79c6a8bc.chunk.js  2.79c6a8bc.chunk.js.map  2.97fcc7ee.chunk.js  2.97fcc7ee.chunk.js.map  2.aab46e4f.chunk.js  2.aab46e4f.chunk.js.map  2.e42d3d64.chunk.js  2.e42d3d64.chunk.js.map  2.e8c959dd.chunk.js  2.e8c959dd.chunk.js.map  2.fd906cf4.chunk.js  2.fd906cf4.chunk.js.map  3.40fc1f96.chunk.js  3.40fc1f96.chunk.js.map  3.8f068492.chunk.js  3.8f068492.chunk.js.map  3.b7b505a0.chunk.js  3.b7b505a0.chunk.js.map  3.d9f69989.chunk.js  3.d9f69989.chunk.js.map  3.dead27c1.chunk.js  3.dead27c1.chunk.js.map  3.ec8707c2.chunk.js  3.ec8707c2.chunk.js.map  main.01cb1a51.chunk.js  main.01cb1a51.chunk.js.map  main.298e5f57.chunk.js  main.298e5f57.chunk.js.map  main.3106f0fb.chunk.js  main.3106f0fb.chunk.js.map  main.33c1539c.chunk.js  main.33c1539c.chunk.js.map  main.375a0845.chunk.js  main.375a0845.chunk.js.map  main.41e06606.chunk.js  main.41e06606.chunk.js.map  main.4632d7af.chunk.js  main.4632d7af.chunk.js.map  main.504485e6.chunk.js  main.504485e6.chunk.js.map  (+38 more)
tests/: test_binary_tree.py  test_cli.py  test_configs.yaml  test_graph.py  test_randomwalker.py  test_skipgram.py
(+5 files in other folders)
