[metadata]
name = deepwalk-clone
version=0.1.0
author= Youngbeom Choi
author_email = helloybz@gmail.com
description = The implementation of Deepwalk paper in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helloybz/deepwalk-clone
project_urls =
    Bug Tracker = https://github.com/helloybz/deepwalk-clone/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = deepwalk
python_requires = >=3.8
install_requires = 
    numpy==1.18.1
    pytorch==1.4


[options.entry_points]
console_scripts= 
    clane = deepwalk.__main__:main