[metadata]
name = deepwalk-clone
version=0.4.0
author= Youngbeom Choi
author_email = helloybz@gmail.com
description = The implementation of Deepwalk paper in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helloybz/deepwalk-clone
project_urls =
    Bug Tracker = https://github.com/helloybz/deepwalk-clone/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = deepwalk
python_requires = >=3.9
install_requires = 
    torch==1.10
    numpy==1.21
    pyyaml==6.0
    tqdm==4.62.3



[options.entry_points]
console_scripts= 
    deepwalk = deepwalk.__main__:main